# brainglobe-workflows

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  asv.conf.json  environment.yml  index.json  info.json  pyproject.toml  pytest.ini  regressions.xml
.github/workflows/: benchmark_and_publish.yml  test_and_deploy.yml
benchmarks/: README.md  asv.bg-requirements.conf.json  asv.conf.json  asv.latest-github.conf.json  asv.pip.conf.json  benchmarks.py  bg-requirements.txt  cellfinder.py  cellfinder_core.py  example.py  latest-github-requirements.txt
benchmarks/benchmarks/: brainglobe_atlasapi.py  cellfinder.py  cellfinder_core.py
benchmarks/cellfinder/: workflows.py
brainglobe-workflows/: main.py
brainglobe-workflows/analyse/: analyse.py
brainglobe-workflows/export/: export.py
brainglobe-workflows/extract/: extract_cubes.py
brainglobe-workflows/tools/: parser.py  prep.py
brainglobe_benchmarks/: cellfinder.py
brainglobe_benchmarks/results/: benchmarks.json
brainglobe_benchmarks/results/eduroam-int-dhcp-97-153-159.ucl.ac.uk/: d83f97ba-conda-py3.10.json  machine.json
brainglobe_scripts/: __init__.py
brainglobe_workflows/: __init__.py  cellfinder.py  main.py  niftyreg_defaults.json  registration_script.py  utils.py
brainglobe_workflows/analyse/: analyse.py
brainglobe_workflows/brainglobe_atlasapi/: create_mouse_atlas.py
brainglobe_workflows/brainmapper/: analyse.py  main.py  parser.py  prep.py
brainglobe_workflows/brainmapper/analyse/: analyse.py
brainglobe_workflows/brainmapper/export/: export.py
brainglobe_workflows/brainmapper/extract/: extract_cubes.py
brainglobe_workflows/brainmapper/figures/: figures.py
brainglobe_workflows/brainmapper/tools/: parser.py  prep.py  system.py  tools.py
brainglobe_workflows/cellfinder/: cellfinder.py  cellfinder_main.py  default_config.json
brainglobe_workflows/cellfinder_brainreg/: main.py
brainglobe_workflows/cellfinder_brainreg/analyse/: analyse.py
brainglobe_workflows/cellfinder_brainreg/export/: export.py
brainglobe_workflows/cellfinder_brainreg/extract/: extract_cubes.py
brainglobe_workflows/cellfinder_brainreg/figures/: figures.py
brainglobe_workflows/cellfinder_brainreg/tools/: parser.py  prep.py
brainglobe_workflows/cellfinder_core/: cellfinder.py  cellfinder_core.py  config.py  utils.py
brainglobe_workflows/configs/: brainglobe_atlasapi_large.json  brainglobe_atlasapi_small.json  cellfinder.json
brainglobe_workflows/export/: export.py
brainglobe_workflows/figures/: figures.py
brainglobe_workflows/tools/: parser.py
docs/: info.json  regressions.xml
docs/graphs/arch-arm64/branch-smg_cellfinder-cli-benchmark/cpu-Apple M1 Pro/machine-eduroam-int-dhcp-97-153-159.ucl.ac.uk/num_cpu-10/os-Darwin 23.0.0/python-3.10/ram-34359738368/: summary.json
docs/graphs/summary/: cellfinder.TimeFullWorkflow.time_workflow_from_cellfinder_run.json
graphs/arch-arm64/branch-HEAD/cpu-Apple M3/machine-Sofias-MacBook-Pro-SWC.local/num_cpu-8/os-Darwin 23.4.0/python-3.10/ram-17179869184/: cellfinder.TimeDetectAndClassifyCells.time_cellfinder_run.json  cellfinder.TimeFullWorkflow.time_workflow.json  summary.json
graphs/summary/: cellfinder.TimeReadInputDask.time_read_background_with_dask.json  cellfinder.TimeReadInputDask.time_read_signal_with_dask.json  cellfinder.TimeSaveCells.time_save_cells.json
tests/: conftest.py
tests/benchmarks/: test_cellfinder.py
tests/brainmapper/: conftest.py
tests/brainmapper/test_integration/: test_detection.py  test_extract.py  test_registration.py
tests/brainmapper/test_unit/: test_analyse.py  test_prep.py
tests/brainmapper/test_unit/test_tools/: test_image_processing.py  test_prep.py  test_system.py  test_tools_general.py
tests/cellfinder/: conftest.py
tests/cellfinder/test_integration/: test_detection.py  test_registration.py
tests/cellfinder/test_unit/: test_analyse.py  test_utils.py
tests/cellfinder/test_unit/test_tools/: test_prep.py  test_tools_general.py
tests/cellfinder_brainreg/test_integration/: test_detection.py  test_extract.py  test_registration.py
tests/cellfinder_brainreg/test_unit/: test_analyse.py
tests/cellfinder_brainreg/test_unit/test_tools/: test_image_processing.py  test_prep.py  test_system.py  test_tools_general.py
tests/cellfinder_core/: conftest.py
tests/cellfinder_core/test_integration/: test_cellfinder.py
tests/cellfinder_core/test_unit/: conftest.py  test_cellfinder.py  test_config.py  test_utils.py
tests/cellfinder_core/test_unit/brainglobe_workflows/: conftest.py  test_cellfinder.py  test_utils.py
tests/data/: input_data_locally.json  input_data_missing_background.json  input_data_missing_signal.json  input_data_not_locally_or_GIN.json
tests/test_integration/: conftest.py  test_cellfinder_benchmarks.py  test_cellfinder_workflow.py
tests/test_integration/brainglobe_benchmarks/: test_cellfinder.py
tests/test_integration/brainglobe_workflows/: test_cellfinder.py
tests/test_unit/: test_cellfinder.py  test_utils.py
tests/test_unit/brainglobe_workflows/: conftest.py  test_cellfinder.py  test_utils.py
tests/test_unit/data/: input_data_not_locally_or_GIN.json
tests/test_unit/workflows/: test_cellfinder.py  test_utils.py
tests/tests/test_integration/: test_detection.py  test_extract.py  test_registration.py
tests/tests/test_unit/: test_analyse.py
tests/tests/test_unit/test_tools/: test_image_processing.py  test_prep.py  test_system.py  test_tools_general.py
workflows/: cellfinder.py  utils.py
