[project]
name = "brainglobe-workflows"
authors = [
    { name = "Adam Tyson", email = "code@adamltyson.com" },
    { name = "BrainGlobe developers", email = "code@adamltyson.com" },
    { name = "Christian Niedworok" },
    { name = "Charly Rousseau" },
]
description = "A collection of end-to-end data analysis workflows executed using BrainGlobe tools."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "brainreg>=1.0.0",
    "cellfinder-core>=0.2.4,<1.0.0",
    "configobj",
    "fancylog>=0.0.7",
    "imio",
    "brainglobe-utils>=0.2.5",
    "multiprocessing-logging>=0.3.4",
    "natsort",
    "numpy",
    "pandas",
    "packaging",
    "pooch",
    "scikit-image",
    "tifffile",
    "tqdm",
]
dynamic = ["version"]

[project.scripts]
cellfinder = "brainglobe_workflows.main:main"

[project.optional-dependencies]
dev = [
    "black",
    "pytest-cov",
    "pytest",
    "gitpython",
    "coverage>=5.0.3",
    "pre-commit",
    "setuptools_scm",
]
napari = [
    "napari[pyqt5]",
    "brainglobe-napari-io",
    "cellfinder-napari<1.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/brainglobe/brainglobe-workflows/issues"
"Documentation" = "https://brainglobe.info/documentation/brainglobe-workflows"
"Homepage" = "https://brainglobe.info"
"Source Code" = "https://github.com/brainglobe/brainglobe-workflows"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py39", "py310"]
skip-string-normalization = false
line-length = 79
ignore = ["*.yaml"]

[tool.cibuildwheel]
build = "cp39-* cp310-*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.check-manifest]

[tool.pytest.ini_options]
addopts = "--cov=brainglobe_workflows"

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["brainglobe_workflows"]
exclude = ["benchmarks", "tests", "resources"]

[tool.setuptools_scm]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39,310}
isolated_build = True

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=brainglobe_workflows --cov-report=xml
"""
