[project]
name = "brainglobe-workflows"
authors = [
    { name = "Adam Tyson", email = "code@adamltyson.com" },
    { name = "BrainGlobe developers", email = "code@adamltyson.com" },
    { name = "Christian Niedworok" },
    { name = "Charly Rousseau" },
]
description = "A collection of end-to-end data analysis workflows executed using BrainGlobe tools."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

# Below the dependencies for brainmapper (the cellfinder CLI tool) only
# (i.e., only what users will need for brainmapper)
dependencies = [
    "brainglobe>=1.3.0",
    "brainglobe-utils>=0.7.0",
    "configobj",
    "fancylog>=0.4.2",
    "multiprocessing-logging>=0.3.4",
    "natsort",
    "numpy",
    "pandas",
    "packaging",
    "pooch",
    "scikit-image",
    "tifffile",
    "tqdm",
]

[project.optional-dependencies]
# Below, everything developers need to contribute
# to the workflows (i.e., run tests, run benchmarks, etc)
dev = [
    "black",
    "pytest-cov",
    "pytest",
    "gitpython",
    "coverage>=5.0.3",
    "pre-commit",
    "setuptools_scm",
    "asv",
]


napari = ["napari[pyqt5]", "brainglobe-napari-io", "cellfinder[napari]>=1.0.0"]

[project.urls]
"Bug Tracker" = "https://github.com/brainglobe/brainglobe-workflows/issues"
"Documentation" = "https://brainglobe.info/documentation/brainglobe-workflows"
"Homepage" = "https://brainglobe.info"
"Source Code" = "https://github.com/brainglobe/brainglobe-workflows"

[project.scripts]
brainmapper = "brainglobe_workflows.brainmapper.main:main"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["brainglobe_workflows"]
exclude = ["tests", "resources", "benchmarks"]

[tool.black]
target-version = ["py310", "py311", 'py312']
skip-string-normalization = false
line-length = 79
ignore = ["*.yaml"]

[tool.check-manifest]

[tool.pytest.ini_options]
addopts = "--cov=brainglobe-workflows"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

[tool.coverage.run]
source = ["./*"]
omit = ["benchmarks/*"]

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.setuptools_scm]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{311,312,313}-{coredev}
isolated_build = True

[gh-actions]
python =
    3.11: py311
    3.12: py312
    3.13: py313


[gh-actions:env]
# This runs the coredev environment if the "coredev" github actions input
# is set to "true"
INPUT_COREDEV =
    true: coredev

[coverage:run]
source = ./*
omit = benchmarks/*

[testenv]
extras =
    dev
deps =
    coredev: git+https://github.com/brainglobe/cellfinder.git
commands =
    pytest {toxinidir} -v --color=yes --cov=./ --cov-report=xml
description =
    Run tests
    coredev: Run tests with the development version of cellfinder
passenv =
    CI
    GITHUB_*
"""
